--- a/package.json
+++ b/package.json
@@ -166,9 +166,10 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "none",
+    "trailingComma": "all",
     "arrowParens": "avoid",
-    "endOfLine": "auto"
+    "endOfLine": "auto",
+    "semi": false
   },
   "stylelint": {
     "extends": [
