remove the debugger item in the toolbar

--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
             "@jupyterlab/fileeditor-extension:search",
             "@jupyterlab/fileeditor-extension:language-server",
             "jupyterlab/fileeditor-extension:editor-syntax-status",
-            "@jupyter-notebook/application-extension:sidepanel"
+            "@jupyter-notebook/application-extension:sidepanel",
+            "@jupyterlab/debugger-extension"
         ]
     },
     "eslintIgnore": [
